# Multimodel-RAG-System

./: README.md  docker-compose.yml
.docker/: Dockerfile.bytewax  Dockerfile.cdc  Dockerfile.etl-backend  Dockerfile.inference  Dockerfile.ui_service
2-data-ingestion/: cdc.py  pyproject.toml  test_cdc.py
3-feature-pipeline/: config.py  db.py  main.py  pyproject.toml
3-feature-pipeline/data_flow/: stream_input.py  stream_output.py
3-feature-pipeline/data_logic/: dispatchers.py  image_data_handlers.py
3-feature-pipeline/models/: __init__.py  image_models.py
3-feature-pipeline/utils/: clip_embeddings.py  image_embeddings.py
etl-backend/: main.py  pyproject.toml
etl-backend/db/: documents.py
etl-backend/services/: pdf_multimodal_processing.py
evaluation-pipeline/: settings.py
evaluation-pipeline/app/: llama2.py
frontend/: config.py
inference/: config.py  db.py  inference_pipeline.py  main.py  pyproject.toml  test_rag.py
inference/llm/: prompt_templates.py
inference/rag/: multimodal_retriever.py
inference/utils/: image_embeddings.py
llm_service/: pyproject.toml
llm_service/app/: llama2.py  llava.py  server.py
rabbitmq/data/: .erlang.cookie
rabbitmq/data/mnesia/rabbit@58a77a9de3b0/: cluster_nodes.config  nodes_running_at_shutdown  rabbit_durable_exchange.DCL  rabbit_durable_queue.DCL  rabbit_runtime_parameters.DCL  rabbit_user.DCL  rabbit_user_permission.DCL  rabbit_vhost.DCL
rabbitmq/data/mnesia/rabbit@5a18bbeda110/: cluster_nodes.config  nodes_running_at_shutdown  rabbit_durable_exchange.DCD  rabbit_durable_queue.DCD  rabbit_runtime_parameters.DCD  rabbit_user.DCD  rabbit_user_permission.DCD  rabbit_vhost.DCD
rabbitmq/data/mnesia/rabbit@5b6b2027426a/: cluster_nodes.config  nodes_running_at_shutdown  rabbit_durable_exchange.DCD  rabbit_durable_queue.DCD  rabbit_durable_queue.DCL  rabbit_runtime_parameters.DCD  rabbit_user.DCD  rabbit_user_permission.DCD  rabbit_vhost.DCD
rabbitmq/data/mnesia/rabbit@6210f894c493/: cluster_nodes.config  nodes_running_at_shutdown  rabbit_durable_exchange.DCD  rabbit_durable_queue.DCD  rabbit_runtime_parameters.DCD  rabbit_user.DCD  rabbit_user_permission.DCD  rabbit_vhost.DCD
rabbitmq/data/mnesia/rabbit@6b2ffb8448b3/: cluster_nodes.config  nodes_running_at_shutdown  rabbit_durable_exchange.DCD  rabbit_durable_queue.DCD  rabbit_durable_queue.DCL  rabbit_runtime_parameters.DCD  rabbit_user.DCD  rabbit_user_permission.DCD  rabbit_vhost.DCD
rabbitmq/data/mnesia/rabbit@7760a18168a4/: cluster_nodes.config  nodes_running_at_shutdown  rabbit_durable_exchange.DCD  rabbit_durable_queue.DCD  rabbit_runtime_parameters.DCD  rabbit_user.DCD  rabbit_user_permission.DCD  rabbit_vhost.DCD
rabbitmq/data/mnesia/rabbit@88d7293c171d/: cluster_nodes.config  nodes_running_at_shutdown  rabbit_durable_exchange.DCD  rabbit_durable_queue.DCD  rabbit_durable_queue.DCL  rabbit_runtime_parameters.DCD  rabbit_user.DCD  rabbit_user_permission.DCD  rabbit_vhost.DCD
rabbitmq/data/mnesia/rabbit@a37890e8842f/: cluster_nodes.config  rabbit_user.DCD  (+7 more)
ui_service/: app.py  config.py  marketing_app.py  pyproject.toml
(+238 files in other folders)
